# Green_Energy_App

./: Dockerfile  energy_router.joblib  main.py  pyproject.toml  train.py
