[tool.poetry]
name = "green-energy-app"
version = "0.1.0"
description = "Smart Grid Energy Router API"
authors = ["Student"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
scikit-learn = "^1.2.0"
joblib = "^1.2.0"
pandas = "^2.0.0"
numpy = "^1.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
